Week 3 Complete all

--- a/Week3/workflow_practice.ipynb
+++ b/Week3/workflow_practice.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "60c456b9",
    "metadata": {},
    "outputs": [],
@@ -45,17 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "037392cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Connection at 0x276593a7f10>"
+       "<sqlite3.Connection at 0x12bc2460d60>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "3b768a75",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "1445"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "0f3573be",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "e568988b",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "8       stores"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
